added dynamically appended buttons, no click events/handlers yet. also added some basic css

--- a/index.html
+++ b/index.html
@@ -14,22 +14,27 @@
 </head>
 <body>
     <!-- BOOTSTRAP NAV BAR (page reload, add button input field) -->
-    <nav class="navbar navbar-light bg-light justify-content-center">
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" id="searchField" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" id="searchButton" type="submit">Search</button>
-        </form>
-    </nav>
+    <div class="navcontainer">
+        <nav class="navbar navbar-light bg-light justify-content-center">
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" id="searchField" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" id="searchButton" type="submit">Search</button>
+            </form>
+        </nav>
+    </div>
 
 
     <!-- CONTAINER FOR RECEIVING GIFS -->
+    <div class ="container" id="buttonReceiver"></div>
     <div class="container" id="gifReceiver"></div>
 
 
 
     <!-- CLEAR LAST/ALL BUTTONS -->
-    <button id="clearLast">Clear Last 10</button>
-    <button id="clearAll">Clear All</button>
+    <div class="container">
+        <center><button id="clearLast">Clear Last 10</button></center>
+        <center><button id="clearAll">Clear All</button></center>
+    </div>
 
 
 
