assignment completed. if time allows, will go back and add bonus work

--- a/index.html
+++ b/index.html
@@ -30,16 +30,8 @@
 
 
 
-    <!-- CLEAR LAST/ALL BUTTONS -->
-    <div class="container">
-        <center><button id="clearLast">Clear Last 10</button></center>
-        <center><button id="clearAll">Clear All</button></center>
-    </div>
-
-
-
     <!-- FOOTER WITH RELEVANT INFO -->
-    <div class="footer">COPYRIGHT ALM CONSULTING 2019</div>
+   <center> <div class="footer">COPYRIGHT ALM CONSULTING 2019</div></center>
 
 
 
