changed search button to add button button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-light bg-light justify-content-center">
             <form class="form-inline">
                 <input class="form-control mr-sm-2" id="searchField" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" id="searchButton" type="submit">Search</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" id="searchButton" type="submit">Add Button</button>
             </form>
         </nav>
     </div>
@@ -31,7 +31,7 @@
 
 
     <!-- FOOTER WITH RELEVANT INFO -->
-   <center> <div class="footer">COPYRIGHT ALM CONSULTING 2019</div></center>
+    <div class="container" id="footer">COPYRIGHT ALM CONSULTING 2019</div>
 
 
 
