clear all button added

--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
 
 
 
-    <!-- FOOTER WITH RELEVANT INFO -->
-    <div class="container" id="footer">COPYRIGHT ALM CONSULTING 2019</div>
 
+    <!-- FOOTER WITH RELEVANT INFO -->
+    <div class="container" id="footer">COPYRIGHT ALM CONSULTING 2019
+        <center><button id=clearButton>CLEAR RESULTS</button></center>
+    </div>
+   
 
 
 <!-- BOOTSTRAP JS/JQ/AJAX LINKS -->
