--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
     <!-- FOOTER WITH RELEVANT INFO -->
-    <div class="container" id="footer">COPYRIGHT ALM CONSULTING 2019
+    <div class="container" id="footer">
         <center><button id=clearButton>CLEAR RESULTS</button></center>
     </div>
    
