added header tag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- BOOTSTRAP NAV BAR (page reload, add button input field) -->
     <div class="navcontainer">
         <nav class="navbar navbar-light bg-light justify-content-center">
-            <form class="form-inline">
+                <a class="navbar-brand">GifLoader</a>
+                <form class="form-inline">
                 <input class="form-control mr-sm-2" id="searchField" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" id="searchButton" type="submit">Add Button</button>
             </form>
